DuPont DevSB/src/objects/pse__Transaction_Delta__c.object
<CustomObject>
    <customHelpPage>pse__TransactionDeltaHelp</customHelpPage>
    <description>Tracks an unprocessed creation or update of a transaction that has been queued for processing. Transaction deltas are produced when the Actuals Calculation Mode is &apos;Scheduled&apos; and new or updated transactions do not roll-up to Actuals immediately. Financialforce PSA creates transaction deltas when transactions are inserted, updated, or deleted.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Is_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this record was created in response to a DML UPDATE on Transaction. If false (default), it was an INSERT.</description>
        <label>Is Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__New_Amount__c</fullName>
        <label>New Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__New_Category__c</fullName>
        <label>New Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__New_Currency__c</fullName>
        <label>New Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__New_Effective_Date__c</fullName>
        <label>New Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__New_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Transaction Deltas</relationshipLabel>
        <relationshipName>Transaction_Deltas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Hours__c</fullName>
        <label>New Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__New_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Transaction Deltas</relationshipLabel>
        <relationshipName>Transaction_Deltas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Transaction Deltas</relationshipLabel>
        <relationshipName>Transaction_Deltas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Transaction Deltas</relationshipLabel>
        <relationshipName>Transaction_Deltas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Related_Record_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Related Record Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__New_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Deltas</relationshipLabel>
        <relationshipName>Transaction_Deltas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Amount__c</fullName>
        <label>Old Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Old_Category__c</fullName>
        <label>Old Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Old_Currency__c</fullName>
        <label>Old Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Old_Effective_Date__c</fullName>
        <label>Old Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Old_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Transaction Deltas (Old Group)</relationshipLabel>
        <relationshipName>Transaction_Deltas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Hours__c</fullName>
        <label>Old Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Old_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Transaction Deltas (Old Practice)</relationshipLabel>
        <relationshipName>Transaction_Deltas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Transaction Deltas (Old Project)</relationshipLabel>
        <relationshipName>Transaction_Deltas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Transaction Deltas (Old Region)</relationshipLabel>
        <relationshipName>Transaction_Deltas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Related_Record_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Related Record Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Old_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Deltas (Old Contact)</relationshipLabel>
        <relationshipName>Transaction_Deltas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Delta</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__New_Amount__c</columns>
        <columns>pse__Old_Amount__c</columns>
        <columns>pse__New_Hours__c</columns>
        <columns>pse__Old_Hours__c</columns>
        <columns>pse__New_Effective_Date__c</columns>
        <columns>pse__Old_Effective_Date__c</columns>
        <columns>pse__New_Category__c</columns>
        <columns>pse__Old_Category__c</columns>
        <columns>pse__New_Related_Record_Deleted__c</columns>
        <columns>pse__Old_Related_Record_Deleted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>pse__Is_Update__c</columns>
        <columns>pse__Is_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Deltas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>